--- a/auth.html
+++ b/auth.html
@@ -123,6 +123,14 @@
       <label>UTK Email</label>
       <input id="suEmail" placeholder="name@utk.edu" />
 
+      <button class="btn" id-"msBtn" style="margin-top:10px;border-color:rgba(45,212,191,0.45);background:rgba(45,212,191,0.4);>
+        continue with UTK Microsoft
+      </button>
+
+      <div class="small" style="margin-top:8px">
+        if email codes go to spam/quarantine, use Microsoft login instead. 
+      </div>
+
       <button class="btn" id="sendCodeBtn">Send Verification Code</button>
 
       <div class="row">
