--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="vc-step-sub">Step 1: Sign in with your UTK Microsoft account to verify you’re a student.</div>
           </div>
 
-          <button id="msBtn" class="vc-btn vc-btn-primary" style="border-color:rgba(45,212,191,0.45);background:rgba(45,212,191,0.30);">
+          <button id="msBtn" class="vc-btn vc-btn-microsoft" type="button">
             Continue with UTK Microsoft
           </button>
 
