Update index.html micro butt

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="vc-step-sub">Step 1: Sign in with your UTK Microsoft account to verify you’re a student.</div>
           </div>
 
-          <button id="msBtn" class="vc-btn vc-btn-microsoft" type="button">
+          <button id="msBtn" type="button" class="vc-btn vc-btn-microsoft" >
             Continue with UTK Microsoft
           </button>
 
