Update index.html fix button

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
       </p>
 
       <div class="btn-row">
-        <button id="videoChatBtn" class="primary-btn">Start Video Chat</button>
-        <button id="textChatBtn" class="primary-btn alt">Start Text Chat</button>
+        <button id="videoChatBtn" class="primary-btn" type="button">Start Video Chat</button>
+        <button id="textChatBtn" class="primary-btn alt" type="button">Start Text Chat</button>
       </div>
 
       <p class="tiny-text">
