Update index.html changed login button thing

--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@
         <label class="vc-label">Password</label>
         <input id="loginPass" class="vc-input" type="password" placeholder="Your password" />
 
+        <div style="margin: 8px 0;">
+          <label style="font-size: 14px; cursor: pointer;">
+            <imput type="checkbox" id="rememberMe" checked />
+            Stay loggedin
+          </label>
+        </div>
+
         <button id="loginBtn" class="vc-btn vc-btn-primary">Login</button>
 
         <div id="loginMsg" class="vc-msg" style="display:none;"></div>
