Update index.html trying to fix checkbox

--- a/index.html
+++ b/index.html
@@ -192,11 +192,9 @@
         <label class="vc-label">Password</label>
         <input id="loginPass" class="vc-input" type="password" placeholder="Your password" />
 
-        <div style="margin: 8px 0;">
-          <label style="font-size: 14px; cursor: pointer;">
-            <imput type="checkbox" id="rememberMe" checked />
-            Stay loggedin
-          </label>
+        <div class="remember-row">
+          <input type="checkbox" id="rememberMe" checked />
+          <label for="rememberMe">Stay logged in</label>label>
         </div>
 
         <button id="loginBtn" class="vc-btn vc-btn-primary">Login</button>
