--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
         <div class="remember-row">
           <input type="checkbox" id="rememberMe" checked />
-          <label for="rememberMe">Stay logged in</label>label>
+          <label for="rememberMe">Stay logged in</label>
         </div>
 
         <button id="loginBtn" class="vc-btn vc-btn-primary">Login</button>
