Update index.html button fix

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <label for="rememberMe">Stay logged in</label>
         </div>
 
-        <button id="loginBtn" class="vc-btn vc-btn-primary">Login</button>
+        <button id="loginBtn" type="button" class="vc-btn bc-btn-primary">Login</button>
 
         <div id="loginMsg" class="vc-msg" style="display:none;"></div>
 
